delete datasets and items from GUI, closes #23
